LATEST VERSION
-----------------------------
- iox-ili-1.21.13-SNAPSHOT
- ili2c-5.3.0-SNAPSHOT

ilivalidator 1.12.0 (2022-08-24)
-----------------------------
- new option --logtime to include timestamps in log file
- new option --singlePass to skip any validations that require a second pass
- allObjectsAccessible in config file not working (#350)
- support ilidata:basketId as file argument (#199)
- iox-ili-1.21.12
- ili2c-5.2.8

ilivalidator 1.11.14 (2022-04-29)
-----------------------------
- fix: objectCount() throws NPE (#337)
- fix: Constraintauswertung bei Aufzaehltypen 'ALL OF' nicht moeglich (#300) 
- fix: INTERLIS.areAreas() does not find overlap (#284) 
- iox-ili-1.21.10
- ili2c-5.2.6

ilivalidator 1.11.13 (2021-12-28)
-----------------------------
- API: Validator.getModel() added
- fix: ignore exception, if model can not be read from data file
- fix: keep explicitly defined user functions/readers
- fix: Use of foreign structure in a catalog is not reported (#328)
- ili2c-5.2.5
- iox-ili-1.21.9

ilivalidator 1.11.12 (2021-11-10)
-----------------------------
- Cannot copy xtf path to log path anymore (#321)
- check uniqueness of TIDs across the whole file (ilivalidator#320)
- validate that an embedded association is not encoded as a standalone link object
- support custom IoxReaders
- check-repo-data: NPE if file doesn't exist in repository
- check-repo-data: support --log parameter
- iox-ili-1.21.8

ilivalidator 1.11.11 (2021-09-13)
-----------------------------
- Remember dialog size and location (#247)
- --check-repo-data continues validation (#314)
- drag and drop for data files (#230)
- new tab "Hilfe" (#279)
- reference attrs in sub-structures are not validated (#319)
- XMLDate has to be checked stronger (YYYY-MM-DD) (#197)
- ilidata repo tools:  use proxy settings
- ili2c-5.2.3
- iox-ili-1.21.7

ilivalidator 1.11.10 (2021-04-30)
-----------------------------
- implement INTERLIS RunTimeParameterDef (#221) 